WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49191
[Qt] image borders do not render correctly
https://bugs.webkit.org/show_bug.cgi?id=49191
Summary
[Qt] image borders do not render correctly
Sam Magnuson
Reported
2010-11-08 10:59:12 PST
The image border tests did not pass, and I believe further background tiling use cases would have been broken. This can easily be seen with LayoutTests/fast/borders/border-image-01.html.
Attachments
Patch
(2.30 KB, patch)
2010-11-08 11:02 PST
,
Sam Magnuson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Magnuson
Comment 1
2010-11-08 11:02:19 PST
Created
attachment 73253
[details]
Patch
Andreas Kling
Comment 2
2010-11-08 23:16:53 PST
Comment on
attachment 73253
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2010-11-09 00:04:42 PST
Comment on
attachment 73253
[details]
Patch Clearing flags on attachment: 73253 Committed
r71611
: <
http://trac.webkit.org/changeset/71611
>
WebKit Commit Bot
Comment 4
2010-11-09 00:04:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug