2010-11-09  Sam Magnuson  <smagnuson@netflix.com>

Reviewed by Andreas Kling.

        [Qt] image borders do not render correctly
        https://bugs.webkit.org/show_bug.cgi?id=49191

        Test: fast/borders/border-image-01.html

        * platform/graphics/qt/ImageQt.cpp:
        (WebCore::Image::drawPattern):

Canonical link: https://commits.webkit.org/62098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71611 268f45cc-cd09-0410-ab3c-d52691b4dbfc